Setup TDD/BDD tools for project

--- a/config/database.yml
+++ b/config/database.yml
@@ -39,7 +39,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: support-tastic_test
 
@@ -67,3 +67,6 @@ production:
   database: support-tastic_production
   username: support-tastic
   password: <%= ENV['SUPPORT-TASTIC_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
